# PySplashSPH

./: .gitignore  .gitmodules  .readthedocs.yml  .releasing.md  .travis.yml  CHANGELOG.md  LICENSE  README.md  build-wheels.sh  docker-build-manylinux-wheels.sh  setup.cfg  setup.py  test-wheel.sh  test.sh  twine-upload.sh
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pysplash.exact.rst  pysplash.interpolation.rst  pysplash.read.rst  pysplash.rst  pysplash.utils.rst
docs/source/examples/: load-dump.rst  make-hdf5.rst
pysplash/: __init__.py
pysplash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pysplash/exact/: __init__.py  exact.py
pysplash/read/: __init__.py  read.py
pysplash/utils/: __init__.py  utils.py
pysplashsph/: __init__.py
pysplashsph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pysplashsph/exact/: __init__.py  exact.py
pysplashsph/interpolation/: __init__.py  interpolation.py
pysplashsph/read/: __init__.py  read.py
pysplashsph/utils/: utils.py
src/: __init__.py
src/exact/: __init__.py
test/: Makefile  test_00000  test_00000.ascii  test_exact.py  test_import.py  test_read.py
test/data/: fulldump_00000  fulldump_00000.h5  smalldump_00000  smalldump_00000.h5  test_00000.h5
