
[metadata]
name = PySplashSPH
version = 0.0.0
author = Josh Calcino
author_email = josh.calcino@gmail.com
license = MIT
url = https://github.com/joshcalcino/pysplashsph
description = Python wrapper module around SPLASH utilities.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Topic :: Scientific/Engineering :: Astronomy
  Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
install_requires =
  h5py
  numpy
  pandas

include_package_data = True

[flake8]
max-line-length = 88
select = C,E,F,W
ignore = E203,E501,W503
max-complexity = 10
exclude =
  .git,
  __pycache__,
  docs/source/conf.py,
  build,
  dist

[mypy]
ignore_missing_imports = True

[pydocstyle]
inherit = false
ignore = D107,D203,D212,D213,D402,D413,D415,D416,D417
match = (?!test_|__init__).*\.py
match_dir = [^build].*
ignore_decorators = is_documented_by
